[package]
name = "cpts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
jupiter-swap-api-client = "0.2.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
solana-cli-output = "3.0.0"
solana-client = "2.3.7"
solana-pubkey = "3.0.0"
solana-sdk = { version = "2.3.1", features = ["full"] }
spl-associated-token-account = "7.0.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
